--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
   },
   "homepage": "https://github.com/kevinhaas/MEAN-map-app#readme",
   "dependencies": {
+    "angular": "^1.5.5",
     "angular-route": "^1.5.3",
-    "bootstrap": "^3.3.6",
-    "modernizr": "^3.3.1",
-    "express": "^4.7.2",
-    "mongoose": "^4.1.0",
-    "morgan": "^1.2.2",
     "body-parser": "^1.5.2",
+    "bootstrap": "^3.3.6",
+    "express": "^4.7.2",
+    "holderjs": "^2.9.3",
+    "jquery": "^2.2.3",
     "jsonwebtoken": "^5.0.2",
-    "method-override": "^2.1.2"
+    "method-override": "^2.1.2",
+    "modernizr": "^3.3.1",
+    "mongoose": "^4.1.0",
+    "morgan": "^1.2.2"
   }
 }
