--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "angular": "^1.5.5",
     "angular-route": "^1.5.3",
+    "angularjs-geolocation": "^0.1.3",
     "body-parser": "^1.5.2",
     "bootstrap": "^3.3.6",
     "express": "^4.7.2",
